--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,7 @@
 %	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
 
-\documentclass[8pt]{cv} % Default font size, values from 8-12pt are recommended
+\documentclass[8pt]{developercv} % Default font size, values from 8-12pt are recommended
 
 %----------------------------------------------------------------------------------------
 
